--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "jobs",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
@@ -12,9 +11,18 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.10"
+    "mongoose": "^5.13.15"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+    "nodemon": "^2.0.20"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mobinans/nodejs-projects.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mobinans/nodejs-projects/issues"
+  },
+  "homepage": "https://github.com/mobinans/nodejs-projects#readme",
+  "description": ""
 }
